attached_assets/Pasted--2025-01-03-18-44-45-0000-5583-INFO-Shutting-down-Master-2025-01-03-18-44-45-0000-5763--1735929985307.txt
[2025-01-03 18:44:45 +0000] [5583] [INFO] Shutting down: Master
 [2025-01-03 18:44:45 +0000] [5763] [INFO] Starting gunicorn 21.2.0
[2025-01-03 18:44:45 +0000] [5763] [INFO] Listening at: http://0.0.0.0:5000 (5763)
[2025-01-03 18:44:45 +0000] [5763] [INFO] Using worker: sync
[2025-01-03 18:44:45 +0000] [5769] [INFO] Booting worker with pid: 5769
[2025-01-03 18:44:45 +0000] [5769] [ERROR] Exception in worker process
Traceback (most recent call last):
  File "/home/runner/Final-Project-112424/.pythonlibs/lib/python3.11/site-packages/gunicorn/arbiter.py", line 609, in spawn_worker
    worker.init_process()
  File "/home/runner/Final-Project-112424/.pythonlibs/lib/python3.11/site-packages/gunicorn/workers/base.py", line 134, in init_process
    self.load_wsgi()
  File "/home/runner/Final-Project-112424/.pythonlibs/lib/python3.11/site-packages/gunicorn/workers/base.py", line 146, in load_wsgi
    self.wsgi = self.app.wsgi()
                ^^^^^^^^^^^^^^^
  File "/home/runner/Final-Project-112424/.pythonlibs/lib/python3.11/site-packages/gunicorn/app/base.py", line 67, in wsgi
    self.callable = self.load()
                    ^^^^^^^^^^^
  File "/home/runner/Final-Project-112424/.pythonlibs/lib/python3.11/site-packages/gunicorn/app/wsgiapp.py", line 58, in load
    return self.load_wsgiapp()
           ^^^^^^^^^^^^^^^^^^^
  File "/home/runner/Final-Project-112424/.pythonlibs/lib/python3.11/site-packages/gunicorn/app/wsgiapp.py", line 48, in load_wsgiapp
    return util.import_app(self.app_uri)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/home/runner/Final-Project-112424/.pythonlibs/lib/python3.11/site-packages/gunicorn/util.py", line 371, in import_app
    mod = importlib.import_module(module)
          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "/nix/store/clx0mcir7qw8zk36zbr4jra789g3knf6-python3-3.11.10/lib/python3.11/importlib/__init__.py", line 126, in import_module
    return _bootstrap._gcd_import(name[level:], package, level)
           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  File "<frozen importlib._bootstrap>", line 1204, in _gcd_import
  File "<frozen importlib._bootstrap>", line 1176, in _find_and_load
  File "<frozen importlib._bootstrap>", line 1147, in _find_and_load_unlocked
  File "<frozen importlib._bootstrap>", line 690, in _load_unlocked
  File "<frozen importlib._bootstrap_external>", line 936, in exec_module
  File "<frozen importlib._bootstrap_external>", line 1074, in get_code
  File "<frozen importlib._bootstrap_external>", line 1004, in source_to_code
  File "<frozen importlib._bootstrap>", line 241, in _call_with_frames_removed
  File "/home/runner/Final-Project-112424/main.py", line 613
    else:
    ^^^^
SyntaxError: invalid syntax
[2025-01-03 18:44:45 +0000] [5769] [INFO] Worker exiting (pid: 5769)
[2025-01-03 18:44:45 +0000] [5763] [ERROR] Worker (pid:5769) exited with code 3
[2025-01-03 18:44:45 +0000] [5763] [ERROR] Shutting down: Master
[2025-01-03 18:44:45 +0000] [5763] [ERROR] Reason: Worker failed to boot